--- a/thehive-templates/Nessus_1_0/short.html
+++ b/thehive-templates/Nessus_1_0/short.html
@@ -2,4 +2,4 @@
 <span ng-if="content.low > 0"  class="label label-info">Nessus:Low={{content.low}}</span>
 <span ng-if="content.medium > 0"  class="label label-warning">Nessus:Medium={{content.medium}}</span>
 <span ng-if="content.high > 0" class="label label-danger">Nessus:High={{content.high}}</span>
-<span ng-if="content.critical class="label label-danger"> 0">Nessus:Critical={{content.critical}}</span>
+<span ng-if="content.critical > 0" class="label label-danger">Nessus:Critical={{content.critical}}</span>
