fix display in progress bar

--- a/thehive-templates/Nessus_1_0/long.html
+++ b/thehive-templates/Nessus_1_0/long.html
@@ -61,19 +61,19 @@
                             <dd>
                                 <div class="progress">
                                     <div class="progress-bar progress-bar-info" ng-style="{width:(host.info *100)/(host.severity)+'%'}">
-                                        <span class="sr-only">{{host.info}}</span>
+                                        <span>{{host.info}}</span>
                                     </div>
                                     <div class="progress-bar progress-bar-success" ng-style="{width:(host.low *100)/(host.severity)+'%'}">
-                                        <span class="sr-only">{{host.low}}</span>
+                                        <span>{{host.low}}</span>
                                     </div>
                                     <div class="progress-bar progress-bar-warning" ng-style="{width:(host.medium *100)/(host.severity)+'%'}">
-                                        <span class="sr-only">{{host.medium}}</span>
+                                        <span>{{host.medium}}</span>
                                     </div>
                                     <div class="progress-bar progress-bar-danger" ng-style="{width:(host.high *100)/(host.severity)+'%'}">
-                                        <span class="sr-only">{{host.danger}}</span>
+                                        <span>{{host.danger}}</span>
                                     </div>
                                     <div class="progress-bar progress-bar-NessusCritical" ng-style="{width:(host.critical *100)/(host.severity)+'%'}">
-                                        <span class="sr-only">{{host.critical}}</span>
+                                        <span>{{host.critical}}</span>
                                     </div>
                                 </div>
                             </dd>
