--- a/thehive-templates/Nessus_1_0/long.html
+++ b/thehive-templates/Nessus_1_0/long.html
@@ -3,11 +3,20 @@
         .report-Nessus dl {
             margin-bottom: 2px;
         }
-        .report-Nessus .label-NessusCritical {
-            background-color: #9b59b6;
+        .report-Nessus .nessus-info {
+            background-color: #3B4CA1;
         }
-        .report-Nessus .progress-bar-NessusCritical {
-            background-color: #9b59b6;
+        .report-Nessus .nessus-low {
+            background-color: #79AB3D;
+        }
+        .report-Nessus .nessus-medium {
+            background-color: #D5C920;
+        }
+        .report-Nessus .nessus-high {
+            background-color: #D39F27;
+        }
+        .report-Nessus .nessus-critical {
+            background-color: #C61010;
         }
     </style>
 
@@ -60,19 +69,19 @@
                             <dt>{{host.severity}} vulnerabilities</dt>
                             <dd>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-info" ng-style="{width:(host.info *100)/(host.severity)+'%'}">
+                                    <div class="progress-bar nessus-info" ng-style="{width:(host.info *100)/(host.severity)+'%'}">
                                         <span>{{host.info}}</span>
                                     </div>
-                                    <div class="progress-bar progress-bar-success" ng-style="{width:(host.low *100)/(host.severity)+'%'}">
+                                    <div class="progress-bar nessus-low" ng-style="{width:(host.low *100)/(host.severity)+'%'}">
                                         <span>{{host.low}}</span>
                                     </div>
-                                    <div class="progress-bar progress-bar-warning" ng-style="{width:(host.medium *100)/(host.severity)+'%'}">
+                                    <div class="progress-bar nessus-medium" ng-style="{width:(host.medium *100)/(host.severity)+'%'}">
                                         <span>{{host.medium}}</span>
                                     </div>
-                                    <div class="progress-bar progress-bar-danger" ng-style="{width:(host.high *100)/(host.severity)+'%'}">
+                                    <div class="progress-bar nessus-high" ng-style="{width:(host.high *100)/(host.severity)+'%'}">
                                         <span>{{host.danger}}</span>
                                     </div>
-                                    <div class="progress-bar progress-bar-NessusCritical" ng-style="{width:(host.critical *100)/(host.severity)+'%'}">
+                                    <div class="progress-bar nessus-critical" ng-style="{width:(host.critical *100)/(host.severity)+'%'}">
                                         <span>{{host.critical}}</span>
                                     </div>
                                 </div>
@@ -90,19 +99,19 @@
                                 <tr>
                                     <td style="text-align: center">
                                         <span ng-switch="vuln.severity">
-                                            <span ng-switch-when="0" class="label label-info">
+                                            <span ng-switch-when="0" class="label nessus-info">
                                                 INFO
                                             </span>
-                                            <span ng-switch-when="1" class="label label-success">
+                                            <span ng-switch-when="1" class="label nessus-low">
                                                 LOW
                                             </span>
-                                            <span ng-switch-when="2" class="label label-warning">
+                                            <span ng-switch-when="2" class="label nessus-medium">
                                                 MEDIUM
                                             </span>
-                                            <span ng-switch-when="3" class="label label-danger">
+                                            <span ng-switch-when="3" class="label nessus-high">
                                                 HIGH
                                             </span>
-                                            <span ng-switch-when="4" class="label label-NessusCritical">
+                                            <span ng-switch-when="4" class="label nessus-critical">
                                                 CRITICAL
                                             </span>
                                         </span>
