--- a/thehive-templates/GoogleSafebrowsing_0_1/short.html
+++ b/thehive-templates/GoogleSafebrowsing_0_1/short.html
@@ -1,2 +1,3 @@
-<span class="label label-success" ng-if="content.results.length == 0 || !content">Safebrowsing: No matches</span>
-<span class="label label-danger" ng-if="content.results.length > 0">Safebrowsing: Match</span>
+<span class="label label-success" ng-if="content.matches == 0 || !content">Google:Safebrowsing=No matches</span>
+<span class="label label-success" ng-if="content.matches == 1">Google:Safebrowsing={{content.matches}} match</span>
+<span class="label label-danger" ng-if="content.matches > 1">Google:Safebrowsing={{content.matches}} matches </span>
