#41 update short report with a taxnomie

--- a/thehive-templates/CIRCLPassiveDNS_0_1/short.html
+++ b/thehive-templates/CIRCLPassiveDNS_0_1/short.html
@@ -1,1 +1,1 @@
-<span ng-if="content" class="label label-primary">PassiveDNS: {{content.hits}} hits</span>&nbsp;
+<span ng-if="content" class="label label-info">CIRCL:PassiveDNS= {{content.hits}} hits</span>&nbsp;
