#41 simplified short report

--- a/thehive-templates/CIRCLPassiveSSL_0_1/short.html
+++ b/thehive-templates/CIRCLPassiveSSL_0_1/short.html
@@ -1,3 +1,2 @@
-<span ng-if="content.num_ips_used_cert || content.num_certs_by_ip" class="label label-primary">PassiveSSL: record available</span>&nbsp;
-<span ng-if="content.num_ips_used_cert" class="label label-primary">PassiveSSL: {{content.num_ips_used_cert}} IPs used that certificate</span>&nbsp;
-<span ng-if="content.num_certs_by_ip" class="label label-primary">PassiveSSL: {{content.num_ips_used_cert}} different certificates on IP<span>&nbsp;
+<span ng-if="content.num_ips_used_cert" class="label label-info">CIRCL:PassiveSSL= {{content.num_ips_used_cert}} records</span>&nbsp;
+<span ng-if="content.num_certs_by_ip" class="label label-info">CIRCL:PassiveSSL= {{content.num_ips_used_cert}} records<span>&nbsp;
