manage or fix error message in long reports

--- a/thehive-templates/GoogleSafebrowsing_0_1/long.html
+++ b/thehive-templates/GoogleSafebrowsing_0_1/long.html
@@ -11,6 +11,7 @@
 		</dl>
 	</div>
 </div>
+
 <div class="panel panel-success" ng-if="success && content.results.length == 0">
 	<div class="panel-heading">
 		Google Safebrowsing Report
@@ -18,4 +19,14 @@
 	<div class="panel-body">
 		<b>No matches.</b>
 	</div>
+</div>
+
+<!-- General error  -->
+<div class="panel panel-danger" ng-if="!success">
+    <div class="panel-heading">
+        <strong>{{(artifact.data || artifact.attachment.name) | fang}}</strong>
+    </div>
+    <div class="panel-body">
+        {{content.errorMessage}}
+    </div>
 </div>
