--- a/thehive-templates/Nessus_1_0/long.html
+++ b/thehive-templates/Nessus_1_0/long.html
@@ -131,3 +131,14 @@
 
 
 </div>
+
+
+<!-- General error  -->
+<div class="panel panel-danger" ng-if="!success">
+    <div class="panel-heading">
+        <strong>{{(artifact.data || artifact.attachment.name) | fang}}</strong>
+    </div>
+    <div class="panel-body">
+        {{content.errorMessage}}
+    </div>
+</div>
