--- a/thehive-templates/CIRCLPassiveDNS_0_1/long.html
+++ b/thehive-templates/CIRCLPassiveDNS_0_1/long.html
@@ -1,14 +1,8 @@
-<div class="panel panel-info">
+<div class="panel panel-info" ng-if="success">
 	<div class="panel-heading">
-		(<a target="_blank" href="http://circl.lu/services/passive-dns/">CIRCL.lu</a>) Passive DNS Report
+		<a target="_blank" href="http://circl.lu/services/passive-dns/">CIRCL.lu</a> Passive DNS Report
 	</div>
 	<div class="panel-body">
-
-		<!-- On error -->
-		<dl class="dl-horizontal" ng-if="content.errorMessage">
-			<dt><i class="fa fa-warning"></i> PassiveDNS: </dt>
-			<dd class="wrap">{{content.errorMessage}}</dd>
-		</dl>
 
 		<!-- Domain details -->
         <p ng-if="content.results.length == 0">
@@ -33,4 +27,18 @@
             </tbody>
         </table>
 	</div>
+</div>
+
+
+<!-- General error  -->
+<div class="panel panel-danger" ng-if="!success">
+    <div class="panel-heading">
+        <strong>{{(artifact.data || artifact.attachment.name) | fang}}</strong>
+    </div>
+    <div class="panel-body">
+    	<dl class="dl-horizontal" ng-if="content.errorMessage">
+            <dt><i class="fa fa-warning"></i> PassiveDNS: </dt>
+            <dd class="wrap">{{content.errorMessage}}</dd>
+        </dl>
+    </div>
 </div>
