--- a/thehive-templates/CIRCLPassiveSSL_0_1/short.html
+++ b/thehive-templates/CIRCLPassiveSSL_0_1/short.html
@@ -1,2 +1,4 @@
-<span ng-if="content.num_ips_used_cert" class="label label-info">CIRCL:PassiveSSL= {{content.num_ips_used_cert}} records</span>&nbsp;
-<span ng-if="content.num_certs_by_ip" class="label label-info">CIRCL:PassiveSSL= {{content.num_ips_used_cert}} records<span>&nbsp;
+<span ng-if="success">
+    <span class="label label-info" ng-if="content.num_ips_used_cert >= 0">CIRCL:PassiveSSL= {{content.num_ips_used_cert}} IPs used that certificate</span>&nbsp;
+    <span class="label label-info" ng-if="content.num_certs_by_ip >= 0">CIRCL:PassiveSSL= {{content.num_certs_by_ip}} different certificates on IP<span>&nbsp;
+</span>&nbsp;
