update short report templates to taxonomies when possible

--- a/thehive-templates/File_Info_1_0/short.html
+++ b/thehive-templates/File_Info_1_0/short.html
@@ -1,7 +1,7 @@
 <span class="label label-info" ng-if="!content.suspicious">
-    {{content.filetype}}
+    File_Info:filetype={{content.filetype}}
 </span>
 
 <span class="label label-warning" ng-if="content.suspicious">
-    {{content.filetype}}: Suspicious
+    File_Info:Suspicious
 </span>
