--- a/thehive-templates/DNSDB_DomainName_1_1/short.html
+++ b/thehive-templates/DNSDB_DomainName_1_1/short.html
@@ -1,1 +1,1 @@
-<span ng-if="content.records" class="label label-info">DNSDB Domain Name: {{content.records}} records</span>
+<span ng-if="content.records" class="label label-info">DNSDB:Domain Name= {{content.records}} records</span>
