--- a/thehive-templates/DNSDB_IPHistory_1_0/short.html
+++ b/thehive-templates/DNSDB_IPHistory_1_0/short.html
@@ -1,1 +1,1 @@
-<span ng-if="content.records" class="label label-info">DNSDB IP History: {{content.records}} records</span>
+<span ng-if="content.records" class="label label-info">DNSDB:IP History= {{content.records}} records</span>
