--- a/thehive-templates/DNSDB_NameHistory_1_0/short.html
+++ b/thehive-templates/DNSDB_NameHistory_1_0/short.html
@@ -1,1 +1,1 @@
-<span ng-if="content.records" class="label label-info">DNSDB Name History: {{content.records}} records</span>
+<span ng-if="content.records" class="label label-info">DNSDB:Name History= {{content.records}} records</span>
