--- a/thehive-templates/DomainTools_WhoisLookup_IP_1_0/short.html
+++ b/thehive-templates/DomainTools_WhoisLookup_IP_1_0/short.html
@@ -1,2 +1,2 @@
-<span ng-if="content.registrant" class="label label-info">DT:Whois:REGISTRANT= {{content.registrant}}</span>
-<span ng-if="content.registrar" class="label label-info">DT:Whois:REGISTRAR= {{content.registrar}}</span>
+<span ng-if="content.registrant" class="label label-info">DomainTools:Whois,REGISTRANT= {{content.registrant}}</span>
+<span ng-if="content.registrar" class="label label-info">DomainTools:Whois,REGISTRAR= {{content.registrar}}</span>
