--- a/thehive-templates/Fortiguard_URLCategory_1_0/short.html
+++ b/thehive-templates/Fortiguard_URLCategory_1_0/short.html
@@ -1,4 +1,4 @@
 <span class="label label-info">
-	URLCat:
+	Fortiguard:URLCat=
 	<span ng-if="content.category">{{content.category}}&nbsp;</span>
 </span>
