--- a/thehive-templates/HippoMore_1_0/short.html
+++ b/thehive-templates/HippoMore_1_0/short.html
@@ -1,1 +1,1 @@
-<span ng-if="content[artifact.data] !== 0" class="label label-danger">HippoMore: {{content[artifact.data]}} record(s)</span>
+<span ng-if="content[artifact.data] !== 0" class="label label-danger">Hippocampe: {{content[artifact.data]}} record(s)</span>
