--- a/thehive-templates/MaxMind_GeoIP_2_0/short.html
+++ b/thehive-templates/MaxMind_GeoIP_2_0/short.html
@@ -1,1 +1,1 @@
-<span class="label label-info">IP location: {{content.country}} / {{content.continent}}</span>
+<span class="label label-info">MaxMind:IP location= {{content.country}} / {{content.continent}}</span>
