swith DomainTools in DT in short reports

--- a/thehive-templates/DomainTools_ReverseNameServer_1_0/short.html
+++ b/thehive-templates/DomainTools_ReverseNameServer_1_0/short.html
@@ -1,1 +1,1 @@
-<span ng-if="content.name_server" class="label label-info">DomainTools:ReverseNameServer= {{content.name_server}}, {{content.domain_count}} domains</span>
+<span ng-if="content.name_server" class="label label-info">DT:ReverseNameServer= {{content.name_server}}, {{content.domain_count}} domains</span>
