--- a/thehive-templates/DomainTools_ReverseIP_1_0/short.html
+++ b/thehive-templates/DomainTools_ReverseIP_1_0/short.html
@@ -1,1 +1,1 @@
-<span ng-if="content.ip.address || content.ip.domain_count" class="label label-info">DomainTools:ReverseIP={{content.ip.address}}: {{content.ip.domain_count}} domains found</span>
+<span ng-if="content.ip.address || content.ip.domain_count" class="label label-info">DT:ReverseIP={{content.ip.address}}: {{content.ip.domain_count}} domains found</span>
