--- a/thehive-templates/DomainTools_ReverseWhois_1_0/short.html
+++ b/thehive-templates/DomainTools_ReverseWhois_1_0/short.html
@@ -1,3 +1,3 @@
 <span ng-if="content.domain_count.current || content.domain_count.historic" class="label label-info">
-    DomainTools:ReverseWhois= curr:{{content.domain_count.current}}/hist:{{content.domain_count.historic}} domains found
+    DT:ReverseWhois= curr:{{content.domain_count.current}}/hist:{{content.domain_count.historic}} domains found
 </span>
