--- a/thehive-templates/VMRay_1_0/short.html
+++ b/thehive-templates/VMRay_1_0/short.html
@@ -1,8 +1,8 @@
-<span ng-if="content.reports.length == 0" class="label label-info">VMRay:scans= No scans</span>&nbsp;
+<span ng-if="content.reports.length == 0" class="label label-info">VMRay:scans= No scan</span>&nbsp;
 <span ng-if="content.reports.length > 0" class="label label-info">VMRay:scans= {{content.reports.length}} scans</span>&nbsp;
 <!-- For each report -->
 <div style="display: inline-block;" ng-repeat="s in content.reports">
-	<span class="label label-info">VMRay:score= {{s.sample_score}}</span></a>&nbsp;
+	<span class="label label-info">VMRay:score= {{s.score}}</span></a>&nbsp;
 	<span class="label" ng-class="{'label-success':sample.sample_severity === 'not_suspicious',
 					'label-danger': sample.sample_severity==='malicious', 'label-info'">{{sample.sample_severity}}</span>
 </div>
