--- a/thehive-templates/FireholBlocklists_1_0/short.html
+++ b/thehive-templates/FireholBlocklists_1_0/short.html
@@ -1,5 +1,2 @@
 <span ng-if="content.count == 0" class="label label-success">Firehol: No match</span>&nbsp;
-<span ng-if="content.count > 0" class="label label-danger">Firehol: {{content.count}} match(es)</span>&nbsp;
-<div style="display:inline-block;" ng-repeat="h in content.hits">
-	<a href="http://iplists.firehol.org/?ipset={{h}}"><span class="label label-danger">Firehol: {{h}}</span></a>&nbsp;
-</div>
+<span ng-if="content.count > 0" class="label label-danger">Firehol: {{content.count}} match(es)</span>&nbsp
