#56 update Google Safebrowsing summary() and short reports

--- a/thehive-templates/GoogleSafebrowsing_1_0/short.html
+++ b/thehive-templates/GoogleSafebrowsing_1_0/short.html
@@ -1,3 +1,3 @@
-<span class="label label-success" ng-if="content.matches == 0 || !content">Google:Safebrowsing=No match</span>
-<span class="label label-danger" ng-if="content.matches == 1">Google:Safebrowsing={{content.matches}} match</span>
-<span class="label label-danger" ng-if="content.matches > 1">Google:Safebrowsing={{content.matches}} matches </span>
+<span class="label" ng-init="t = content.taxonomy" ng-class="{'info': 'label-info', 'safe': 'label-success', 'suspicious': 'label-warning', 'malicious':'label-danger'}[content.level]">
+    {{t.namespace}}:{{t.predicate}}={{t.value}}
+</span>
