--- a/thehive-templates/CERTatPassiveDNS_0_1/short.html
+++ b/thehive-templates/CERTatPassiveDNS_0_1/short.html
@@ -1,1 +1,3 @@
-<span class="label label-info">CERT.at:PDNS="{{content.hits}} hits"</span>&nbsp;
+<span class="label" ng-init="t = content.taxonomy" ng-class="{'info': 'label-info', 'safe': 'label-success', 'suspicious': 'label-warning', 'malicious':'label-danger'}[content.level]">
+    {{t.namespace}}:{{t.predicate}}={{t.value}}
+</span>
