--- a/thehive-templates/CIRCLPassiveDNS_1_0/short.html
+++ b/thehive-templates/CIRCLPassiveDNS_1_0/short.html
@@ -1,1 +1,3 @@
-<span ng-if="content" class="label label-info">CIRCL:PassiveDNS= {{content.hits}} hits</span>&nbsp;
+<span class="label" ng-init="t = content.taxonomy" ng-class="{'info': 'label-info', 'safe': 'label-success', 'suspicious': 'label-warning', 'malicious':'label-danger'}[content.level]">
+    {{t.namespace}}:{{t.predicate}}={{t.value}}
+</span>&nbsp;
