#56 update Farsight DNSDB summary() and short reports

--- a/thehive-templates/DNSDB_IPHistory_1_0/short.html
+++ b/thehive-templates/DNSDB_IPHistory_1_0/short.html
@@ -1,1 +1,3 @@
-<span ng-if="content.records" class="label label-info">DNSDB:IP History= {{content.records}} records</span>
+<span class="label" ng-init="t = content.taxonomy" ng-class="{'info': 'label-info', 'safe': 'label-success', 'suspicious': 'label-warning', 'malicious':'label-danger'}[content.level]">
+    {{t.namespace}}:{{t.predicate}}={{t.value}}
+</span>&nbsp;
