--- a/thehive-templates/DomainTools_ReverseNameServer_1_0/short.html
+++ b/thehive-templates/DomainTools_ReverseNameServer_1_0/short.html
@@ -1,1 +1,3 @@
-<span ng-if="content.name_server" class="label label-info">DT:ReverseNameServer= {{content.name_server}}, {{content.domain_count}} domains</span>
+<span class="label" ng-repeat="t in content.taxonomies" ng-class="{'info': 'label-info', 'safe': 'label-success', 'suspicious': 'label-warning', 'malicious':'label-danger'}[t.level]">
+    {{t.namespace}}:{{t.predicate}}={{t.value}}
+</span>&nbsp;
