--- a/thehive-templates/DomainTools_ReverseWhois_1_0/short.html
+++ b/thehive-templates/DomainTools_ReverseWhois_1_0/short.html
@@ -1,3 +1,3 @@
-<span ng-if="content.domain_count.current || content.domain_count.historic" class="label label-info">
-    DT:ReverseWhois= curr:{{content.domain_count.current}}/hist:{{content.domain_count.historic}} domains found
-</span>
+<span class="label" ng-repeat="t in content.taxonomies" ng-class="{'info': 'label-info', 'safe': 'label-success', 'suspicious': 'label-warning', 'malicious':'label-danger'}[t.level]">
+    {{t.namespace}}:{{t.predicate}}={{t.value}}
+</span>&nbsp;
