--- a/thehive-templates/CIRCLPassiveDNS_1_0/short.html
+++ b/thehive-templates/CIRCLPassiveDNS_1_0/short.html
@@ -1,3 +1,3 @@
-<span class="label" ng-init="t = content.taxonomy" ng-class="{'info': 'label-info', 'safe': 'label-success', 'suspicious': 'label-warning', 'malicious':'label-danger'}[content.level]">
+<span class="label" ng-repeat="t in content.taxonomies" ng-class="{'info': 'label-info', 'safe': 'label-success', 'suspicious': 'label-warning', 'malicious':'label-danger'}[t.level]">
     {{t.namespace}}:{{t.predicate}}={{t.value}}
 </span>&nbsp;
