--- a/thehive-templates/FireHOLBlocklists_1_0/short.html
+++ b/thehive-templates/FireHOLBlocklists_1_0/short.html
@@ -1,2 +1,3 @@
-<span ng-if="content.count == 0" class="label label-success">Firehol: No match</span>&nbsp;
-<span ng-if="content.count > 0" class="label label-danger">Firehol: {{content.count}} match(es)</span>&nbsp
+<span class="label" ng-repeat="t in content.taxonomies" ng-class="{'info': 'label-info', 'safe': 'label-success', 'suspicious': 'label-warning', 'malicious':'label-danger'}[t.level]">
+    {{t.namespace}}:{{t.predicate}}={{t.value}}
+</span>&nbsp;
