--- a/thehive-templates/HippoMore_1_0/short.html
+++ b/thehive-templates/HippoMore_1_0/short.html
@@ -1,1 +1,3 @@
-<span ng-if="content[artifact.data] !== 0" class="label label-danger">Hippocampe: {{content[artifact.data]}} record(s)</span>
+<span class="label" ng-repeat="t in content.taxonomies" ng-class="{'info': 'label-info', 'safe': 'label-success', 'suspicious': 'label-warning', 'malicious':'label-danger'}[t.level]">
+    {{t.namespace}}:{{t.predicate}}={{t.value}}
+</span>&nbsp;
