--- a/thehive-templates/JoeSandbox_File_Analysis_Inet_1_1/short.html
+++ b/thehive-templates/JoeSandbox_File_Analysis_Inet_1_1/short.html
@@ -1,13 +1,3 @@
-<span ng-repeat="(k,v) in content">
-    <span ng-switch="k">
-        <span ng-switch-when="clean" class="label label-success" ng-if="v === true">
-            JSB:Clean
-        </span>
-        <span ng-switch-when="malicious" class="label label-danger" ng-if="v === true">
-            JSB:Malicious={{content.score}}/{{content.maxscore}}
-        </span>
-        <span ng-switch-when="suspicious" class="label label-danger" ng-if="v === true">
-            JSB:Suspicious={{content.score}}/{{content.maxscore}}
-        </span>
-    </span>
-</span>
+<span class="label" ng-repeat="t in content.taxonomies" ng-class="{'info': 'label-info', 'safe': 'label-success', 'suspicious': 'label-warning', 'malicious':'label-danger'}[t.level]">
+    {{t.namespace}}:{{t.predicate}}={{t.value}}
+</span>&nbsp;
