--- a/thehive-templates/MaxMind_GeoIP_2_0/short.html
+++ b/thehive-templates/MaxMind_GeoIP_2_0/short.html
@@ -1,1 +1,3 @@
-<span class="label label-info">MaxMind:IP location= {{content.country}} / {{content.continent}}</span>
+<span class="label" ng-repeat="t in content.taxonomies" ng-class="{'info': 'label-info', 'safe': 'label-success', 'suspicious': 'label-warning', 'malicious':'label-danger'}[t.level]">
+    {{t.namespace}}:{{t.predicate}}={{t.value}}
+</span>&nbsp;
