--- a/thehive-templates/Msg_Parser_1_0/short.html
+++ b/thehive-templates/Msg_Parser_1_0/short.html
@@ -1,3 +1,3 @@
-<span ng-if="content.attachments > 0" class="label label-warning">
-    MsgParser: <ng-pluralize count="content.attachments" when="{'1': '1 attachment', 'other': '{} attachments'}"></ng-pluralize>
-</span>
+<span class="label" ng-repeat="t in content.taxonomies" ng-class="{'info': 'label-info', 'safe': 'label-success', 'suspicious': 'label-warning', 'malicious':'label-danger'}[t.level]">
+    {{t.namespace}}:{{t.predicate}}={{t.value}}
+</span>&nbsp;
