#56 update Nessus summary() and short reports

--- a/thehive-templates/Nessus_1_0/short.html
+++ b/thehive-templates/Nessus_1_0/short.html
@@ -1,5 +1,3 @@
-<span ng-if="content.info > 0"  class="label label-info">Nessus:Info={{content.info}}</span>
-<span ng-if="content.low > 0"  class="label label-info">Nessus:Low={{content.low}}</span>
-<span ng-if="content.medium > 0"  class="label label-warning">Nessus:Medium={{content.medium}}</span>
-<span ng-if="content.high > 0" class="label label-danger">Nessus:High={{content.high}}</span>
-<span ng-if="content.critical > 0" class="label label-danger">Nessus:Critical={{content.critical}}</span>
+<span class="label" ng-repeat="t in content.taxonomies" ng-class="{'info': 'label-info', 'safe': 'label-success', 'suspicious': 'label-warning', 'malicious':'label-danger'}[t.level]">
+    {{t.namespace}}:{{t.predicate}}={{t.value}}
+</span>&nbsp;
