#66 fix wording and typos

--- a/thehive-templates/Virusshare_2_0/long.html
+++ b/thehive-templates/Virusshare_2_0/long.html
@@ -51,7 +51,7 @@
     </div>
     <div class="panel-body">
     	<dl class="dl-horizontal" ng-if="content.errorMessage">
-            <dt><i class="fa fa-warning"></i> PassiveDNS: </dt>
+            <dt><i class="fa fa-warning"></i> Virusshare: </dt>
             <dd class="wrap">{{content.errorMessage}}</dd>
         </dl>
     </div>
