--- a/thehive-templates/CuckooSandbox_File_Analysis_Inet_1_0/short.html
+++ b/thehive-templates/CuckooSandbox_File_Analysis_Inet_1_0/short.html
@@ -1,5 +1,3 @@
-<span class="label" ng-class="{'label-info': content.malscore<=2, 'label-warning': content.malscore>2 && content.malscore<=6.5, 'label-danger': content.malscore >6.5}">
-                Cuckoo Sandbox=
-        <span ng-if="content.malscore">CSB:Malscore={{content.malscore}}</span>
-        <span ng-if="content.malfamily">CSB:Malfamily=[{{ content.malfamily}}]</span>
-</span>
+<span class="label" ng-repeat="t in content.taxonomies" ng-class="{'info': 'label-info', 'safe': 'label-success', 'suspicious': 'label-warning', 'malicious':'label-danger'}[t.level]">
+    {{t.namespace}}:{{t.predicate}}={{t.value}}
+</span>&nbsp;
