--- a/thehive-templates/CuckooSandbox_File_Analysis_Inet_1_0/long.html
+++ b/thehive-templates/CuckooSandbox_File_Analysis_Inet_1_0/long.html
@@ -125,11 +125,11 @@
             <div ng-if="content.suricata_alerts">
                 <h4>Suricata Alerts</h4>
                 <br>
-                <dl class="dl-horizontal" ng-repeat="suri in content.suri track by $index">
+                <dl class="dl-horizontal" ng-repeat="suri in content.suricata_alerts track by $index">
                     <dd>{{ suri }}<dd>
                 </dl>
             </div>
-            <div ng-if="!content.suri">
+            <div ng-if="!content.suricata_alerts">
                 No suspicious suricata alerts reported
             </div>
         </div>
