#48 Display only antivirus results in the IRMA long report

--- a/thehive-templates/IRMA_Scan_1.0/long.html
+++ b/thehive-templates/IRMA_Scan_1.0/long.html
@@ -14,7 +14,7 @@
                         'text-success': probe.status ===0 ,
                         'text-danger': probe.status === 1,
                         'text-warning': probe.status === -1
-                    }">
+                    }" ng-if="probe.type === 'antivirus'">
                     <td>
                         <strong>{{probe.name}}</strong>
                     </td>
