--- a/thehive-templates/IRMA_Scan_1.0/long.html
+++ b/thehive-templates/IRMA_Scan_1.0/long.html
@@ -37,3 +37,12 @@
         </div>
     </div>
 </div>
+
+<div class="panel panel-danger" ng-if="!success">
+    <div class="panel-heading">
+        <strong>{{artifact.attachment.name}}</strong>
+    </div>
+    <div class="panel-body">
+        {{content.errorMessage}}
+    </div>
+</div>
