--- a/thehive-templates/CuckooSandbox_File_Analysis_Inet_1_0/long.html
+++ b/thehive-templates/CuckooSandbox_File_Analysis_Inet_1_0/long.html
@@ -129,7 +129,7 @@
                     <dd>{{ suri }}<dd>
                 </dl>
             </div>
-            <div ng-if="!content.suri">
+            <div ng-if="!content.suricata_alerts">
                 No suspicious suricata alerts reported
             </div>
         </div>
