--- a/thehive-templates/VxStreamSandbox_Hash_Report_Publuc_API_1_0/long.html
+++ b/thehive-templates/VxStreamSandbox_Hash_Report_Publuc_API_1_0/long.html
@@ -16,6 +16,18 @@
   <!-- Hash and File (also hash) -->
   <div class="panel-body">
     <div ng-repeat="r in ::content.results.response">
+      <dl class="dl-horizontal" ng-if="r.verdict">
+        <strong>Verdict: </strong>
+        <span class="label" ng-class="{'no specific threat': 'label-info', 'Whitelisted': 'label-success', 'suspicious': 'label-warning', 'malicious':'label-danger'}[r.verdict]">
+            {{r.verdict}}
+        </span><br/>
+      </dl>
+      <dl class="dl-horizontal" ng-if="r.classification_tags.length > 0">
+          <strong>Tagged as:</strong>
+          <span class="tags-list flexwrap" ng-repeat="tag in ::r.classification_tags ">
+            {{tag}}
+          </span>
+      </dl>
       <dl class="dl-horizontal" ng-if="r.submitname">
         <strong>Submitted filename: </strong> {{r.submitname}}<br/>
       </dl>
@@ -49,18 +61,16 @@
       <dl class="dl-horizontal" ng-if="r.environmentDescription">
         <strong>Environment Description: </strong> {{r.environmentDescription}}<br/>
       </dl>
-      <dl class="dl-horizontal" ng-if="r.verdict">
-        <strong>Verdict: </strong>{{r.verdict}} <br/>
-      </dl>
       <dl class="dl-horizontal" ng-if="r.domains.length > 0">
         <strong>DNS requests:</strong><ul><li ng-repeat="domain in ::r.domains">{{domain}}</li></ul>
       </dl>
       <dl class="dl-horizontal" ng-if="r.hosts.length > 0">
         <strong>Contacted Hosts:</strong><ul><li ng-repeat="host in ::r.hosts">{{host}}</li></ul>
       </dl>
-      <dl class="dl-horizontal" ng-if="r.classification_tags.length > 0">
-        <strong>Tagged as:</strong><ul><li ng-repeat="tag in ::r.classification_tags">{{tag}}</li></ul>
-      </dl>
+      <dl class="dl-horizontal" ng-if="r.hosts.length > 0">
+          <strong>Online report:</strong>
+          <a href="https://www.hybrid-analysis.com/sample/"+{{r.sha256}}>"https://www.hybrid-analysis.com/sample/"+{{r.sha256}}</a>
+        </dl>
       <hr>
     </div>
   </div>
